Fix cards not aligning properly, clean up site text
Used wrap property and flex basis to
align cards closer to the desired outcome.

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -14,6 +14,7 @@ body {
   padding-left: 8px;
   background: darkmagenta;
   color: white;
+  font-size: 1.4em;
   font-weight: 1000;
 }
 
@@ -27,15 +28,16 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
-  flex: 1 0 150px;
+  flex: 1 0 200px;
 }
 
 ul {
   display: flex;
   flex-flow: column nowrap;
-  gap: 8px;
+  gap: 16px;
   padding: 10px;
   list-style: none;
+  font-weight: 500;
 }
 
 li a {
@@ -44,9 +46,10 @@ li a {
 }
 
 .main-content {
+  padding: 10px;
   display: flex;
   justify-content: space-around;
-  flex-flow: row;
+  flex-flow: row wrap;
   gap: 16px;
 }
 
@@ -54,6 +57,8 @@ li a {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  flex: 0 1 320px;
+  padding: 8px;
 }
 
 .footer {
@@ -64,5 +69,5 @@ li a {
   height: 50px;
   background: #eee;
   color: darkmagenta;
-  /* margin-top: auto; Wouald cause problems if used! flex: 1 in center-holder is better!*/
+  /* margin-top: auto; Would cause problems if used! flex: 1 in center-holder is better!*/
 }
